--- a/forms/login_view.ui
+++ b/forms/login_view.ui
@@ -165,7 +165,7 @@ font: 75 24pt &quot;Cairo&quot;;</string>
            </font>
           </property>
           <property name="placeholderText">
-           <string>Abdel-Rahman Saied</string>
+           <string>Fatma Amr .......</string>
           </property>
          </widget>
         </item>
